Fix navbar toggle on mobile

--- a/http_src/components/sidebar/sidebar.scss
+++ b/http_src/components/sidebar/sidebar.scss
@@ -380,6 +380,10 @@ main#n-container {
     width: 100%;
     transition: 0.5s ease-in;
   }
+
+  .navbar ul.navbar-nav li.nav-item-mobile-button {
+    margin-top: 0.5rem;
+  }
 }
 
 #n-sidebar.bg-dark .sidebar-info {
